kuma-project/kuma-project-blog/k8s/blog-fronted.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-fronted
  namespace: base
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: blog-fronted
  template:
    metadata:
      labels:
        app: blog-fronted
    spec:
      containers:
        - name: blog-fronted
          image: crpi-1obf2jefhlbm76al.cn-guangzhou.personal.cr.aliyuncs.com/kumaoji/blog-fronted:placeholder
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blog-fronted
  namespace: base
spec:
  selector:
    app: blog-fronted
  ports:
    - port: 80
      targetPort: 80
