kuma-project/kuma-project-blog/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-fronted
  namespace: base
  annotations:
    # 使用 letsencrypt certResolver 自动签发证书
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  tls:
    - hosts:
        - blog.kumacloud.top
  rules:
    - host: blog.kumacloud.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-fronted
                port:
                  number: 80
